--- a/servicio-items-dev.properties
+++ b/servicio-items-dev.properties
@@ -1,3 +1,3 @@
-configuracion.texto=Configurando ambiente Desarrollo
-configuracion.autor.nombre=Jeair
-configuracion.autor.email=jeaircr@gmail.com
+configuracion.texto=Configurando ambiente Desarrollo....
+configuracion.autor.nombre=Alberto
+configuracion.autor.email=alberto.can@gmail.com
